Compiler/src/main/java/Testing/Tests/SemanticTests/failing/DuplicateParameter.ru
struct B{}
impl B{
.(){}
fn m1(Char a, Int a) -> Bool{}}
start{}